@@ -119,7 +119,9 @@
                     <compilerArgs>
                         <!-- FFM is standard in 22+, but let's ensure preview is enabled if needed for other libs -->
                         <arg>--enable-preview</arg>
-                        <arg>${maven.compiler.args}</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                        <arg>-Xpkginfo:always</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
