@@ -411,7 +411,9 @@
           <configuration>
             <release>21</release>
             <compilerArgs>
-              <arg>${maven.compiler.args}</arg>
+              <arg>--add-modules</arg>
+              <arg>jdk.incubator.vector</arg>
+              <arg>-Xpkginfo:always</arg>
             </compilerArgs>
             <annotationProcessorPaths>
               <path>
@@ -533,6 +535,11 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
               <release>21</release>
+              <compilerArgs>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.vector</arg>
+                <arg>-Xpkginfo:always</arg>
+              </compilerArgs>
               <testExcludes>
                 <exclude>module-info.java</exclude>
               </testExcludes>
